--- a/style.scss
+++ b/style.scss
@@ -1,7 +1,6 @@
 .container {
     display: flex;
     width: 100%;
-    padding: 3px;
     box-sizing: border-box;
     height: 20vh;
   }
@@ -10,14 +9,14 @@
     flex: 1;
     overflow: hidden;
     transition: .5s;
-    margin: 0 3px;
     line-height: 0;
-    border-radius: 3px;
   }
   
   .box > img {
     width: 150%;
     height: 100%;
+    border: 0.22rem solid white;
+    border-radius: 3px;
     object-fit: cover; 
     transition: ease 0.75s;
   }
@@ -25,7 +24,7 @@
   .box:hover { 
         flex: 1 1 30%;
         height: 150%;
-        box-shadow: 5px 5px 5px rgb(73, 73, 73, 0.65);
+        box-shadow: 8px 8px 8px rgb(73, 73, 73, 0.65);
         z-index: 1;
         cursor: pointer;
     }
